<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/printer_setting"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/title_divider_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingEnd="30dp"
        android:paddingRight="30dp"
        app:layout_constraintTop_toBottomOf="@id/title_divider_view">

        <TextView
            android:id="@+id/savePrinterInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Connected: Lan-01:12:12:121:121" />

        <TextView
            android:id="@+id/textViewInterface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interfaceTextView" />

        <CheckBox
            android:id="@+id/checkBoxLan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:checked="true"
            android:text="@string/lanCheckBox" />

        <CheckBox
            android:id="@+id/checkBoxBluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:checked="true"
            android:text="@string/bluetoothCheckBox" />

        <CheckBox
            android:id="@+id/checkBoxUsb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:checked="true"
            android:text="@string/usbCheckBox" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonDiscovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_with_border"
                android:text="@string/discoveryButton"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:id="@+id/title_divider_view2"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/savePrinterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout" />

    <Button
        android:id="@+id/savePrinterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@drawable/button_with_border"
        android:text="@string/savePrinter"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>
